test_programs/compile_failure/integer_too_large/src/main.nr
fn main(x: Field) {
    let too_large: Field = 233149999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999923314999999999999999999999999999999999999999999999999999999999;
    assert(x == too_large);
}